kubernetes/manifest/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-flow
  labels:
    name: app1
