kubernetes/manifest/app1-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gitops-flow
  name: app1-svc
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
